--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "local_temp_download_folder": "D:\\Music\\DownOnSpot",
   "local_library_folder": "D:\\Music",
-  "extensions_to_scan": [".mp3"],
-  "script_owner": "HammadXP",
-  "region": "PK",
+  "extensions_to_scan": [".ogg"],
+  "script_owner": "HammadXP modified by 01110111000001",
+  "region": "BE",
   "playlists": {
     "shorts_music": "https://open.spotify.com/playlist/5rCPO6bFNZfwnZSC857LeS?si=823bb76b528a4e26"
   }
